include stivale headers properly

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -100,6 +100,7 @@ set(KERNEL_HEADER_DIR
 set(INCLUDE_DIRECTORIES
 	${LIBC_HEADER_DIR}
 	${LIBSTDCXX_HEADER_DIR}
+	${TOOLCHAINDIR}/stivale
 	${KERNEL_HEADER_DIR}
 )
 
