--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -119,6 +119,7 @@ set(LIBC_SOURCES
 	libc/stdlib/itoa.cpp
 	libc/string/memset.cpp
 	libc/string/strcmp.cpp
+	libc/string/strlen.cpp
 	libc/math/pow.cpp
 	libc/math/sqrt.cpp
 	libc/math/log.cpp
