initial work towards rtl8139 driver (not working)

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -152,6 +152,7 @@ set(KERNEL_SOURCES
 	heap/trivial_allocator.cpp
 	shell/command.cpp
 	shell/interpreter.cpp
+	net/rtl8139.cpp
 	${INTERRUPT_SOURCES}
 	kernel.cpp
 )
